# clouddash

./: .env.example  .gitignore  DEPLOYMENT.md  DESIGN.md  EVAL_RESULTS.md  LICENSE  Makefile  PROGRESS.md  README.md  REQUIREMENTS_MATRIX.md  pyproject.toml  render.yaml  requirements.txt
backend/: pyproject.toml
backend/config/: agents.yaml  routing.yaml
backend/data/: mock_customers.json
backend/knowledge_base/account_access/: KB-018-rbac-team-roles.md  KB-019-audit-logs.md
backend/knowledge_base/api_docs/: KB-015-webhook-configuration.md  KB-016-python-sdk-quickstart.md
backend/knowledge_base/billing/: KB-012-resolving-duplicate-charges.md
backend/knowledge_base/troubleshooting/: KB-008-relinking-aws-credentials.md  KB-009-sso-sign-in-failures.md
backend/src/clouddash/: settings.py
backend/src/clouddash/agents/: base.py  escalation.py  knowledge.py  technical.py  triage.py
backend/src/clouddash/api/: app.py
backend/src/clouddash/api/routes/: chat.py  health.py  hitl.py  trace.py
backend/src/clouddash/guardrails/: __init__.py  input.py
backend/src/clouddash/multilingual/: sarvam_detect.py
backend/src/clouddash/orchestrator/: graph.py
backend/src/clouddash/prompts/: escalation.md  knowledge.md  reranker.md  technical.md
backend/src/clouddash/providers/: __init__.py  gemini.py  sarvam.py
backend/src/clouddash/retrieval/: bm25_store.py  crag_graph.py  loader.py  reranker.py  vector_store.py
backend/src/clouddash/tools/: crm.py  feature_request.py
data/: mock_customers.json
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx
frontend/components/: Dashboard.tsx
frontend/components/agents/: AgentBadge.tsx  AgentStatusPanel.tsx
frontend/components/chat/: CitationTooltip.tsx  HITLApprovalDialog.tsx  HandoverBanner.tsx  MessageInput.tsx  ScenarioButtons.tsx  StreamingMessage.tsx
frontend/components/layout/: Header.tsx  StatusBar.tsx
frontend/components/trace/: RetrievedChunks.tsx  TraceTimeline.tsx
frontend/components/visuals/: AgentGraphSVG.tsx
frontend/hooks/: useStreamingChat.ts
frontend/lib/: api.ts  types.ts
frontend/store/: conversation.ts
knowledge_base/account_access/: KB-017-configuring-sso.md
knowledge_base/api_docs/: KB-014-api-auth-and-rate-limits.md
knowledge_base/billing/: KB-010-how-to-upgrade-your-plan.md  KB-011-refund-policy.md  KB-013-invoice-format.md
knowledge_base/faqs/: KB-001-reset-api-key.md  KB-002-supported-cloud-providers.md  KB-003-invite-team-members.md  KB-004-plan-comparison.md
knowledge_base/troubleshooting/: KB-005-alerts-not-firing.md  KB-006-dashboard-loading-slowly.md  KB-007-aws-cloudwatch-integration-failing.md
src/clouddash/: __init__.py  exceptions.py  llm.py  logging_setup.py  models.py  settings.py
src/clouddash/agents/: __init__.py  _helpers.py  base.py  billing.py  escalation.py  knowledge.py  registry.py  technical.py  triage.py
src/clouddash/api/: __init__.py  app.py
src/clouddash/api/routes/: agents.py  chat.py  trace.py
src/clouddash/api/static/: app.css
src/clouddash/api/templates/: _turn.html  index.html
src/clouddash/cli/: __init__.py  main.py
src/clouddash/evals/: __init__.py  judge.py  run.py  scenarios.yaml
src/clouddash/guardrails/: __init__.py  input.py  output.py  pipeline.py
src/clouddash/handover/: __init__.py  audit.py  failover.py
src/clouddash/orchestrator/: __init__.py  graph.py
src/clouddash/prompts/: billing.md  judge.md  query_rewriter.md  triage.md
src/clouddash/providers/: factory.py
src/clouddash/retrieval/: __init__.py  bm25.py  chunker.py  citations.py  crag_graph.py  embedder.py  loader.py  query_rewriter.py  retriever.py  vector_store.py
src/clouddash/scripts/: __init__.py  ingest_kb.py  smoke_orchestrator.py  smoke_retrieval.py
src/clouddash/tools/: __init__.py  crm.py  escalation_tools.py  tickets.py
tests/: conftest.py  test_guardrails.py  test_models.py  test_orchestrator_smoke.py  test_registry.py  test_retrieval.py
