[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clouddash"
version = "0.1.0"
description = "CloudDash — Multi-Agent Customer Support System (Vikara assignment)"
authors = [{name = "Mohan Ganesh", email = "mohanganesh165577@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "MIT"}
keywords = ["agents", "rag", "langgraph", "customer-support", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Orchestration
    "langgraph>=0.2.70,<0.6",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.4,<2.0",
    "langchain-community>=0.3.10,<0.4",
    "langchain-google-genai>=2.0.7,<3.0",
    "langchain-groq>=1.0,<2.0",
    "langchain-nvidia-ai-endpoints>=1.0,<2.0",
    "langchain-chroma>=0.1.4,<0.3",

    # Retrieval / embeddings
    "chromadb>=0.5.20,<0.7",
    "sentence-transformers>=3.3.0,<5.0",
    "rank-bm25>=0.2.2,<0.3",

    # Validation / config
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "pyyaml>=6.0.2,<7.0",

    # Web framework
    "fastapi>=0.115.0,<0.120",
    "uvicorn[standard]>=0.32.0,<0.40",
    "jinja2>=3.1.4,<4.0",
    "python-multipart>=0.0.20,<0.1",
    "httpx>=0.27.0,<0.30",

    # Logging
    "structlog>=24.4.0,<26.0",

    # CLI
    "typer>=0.13.0,<0.20",
    "rich>=13.9.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-mock>=3.14.0,<4.0",
    "ruff>=0.7.0,<1.0",
    "mypy>=1.13.0,<2.0",
]

[project.scripts]
clouddash = "clouddash.cli.main:app"
clouddash-ingest = "clouddash.scripts.ingest_kb:main"
clouddash-eval = "clouddash.evals.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clouddash = [
    "prompts/*.md",
    "api/templates/*.html",
    "api/static/*",
]

# -----------------------------------------------------------------------------
# Tooling configuration
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default arg (FastAPI uses Depends())
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "rank_bm25.*",
    "chromadb.*",
    "sentence_transformers.*",
    "langchain_community.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring API keys",
]
