[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clouddash"
version = "2.0.0"
description = "CloudDash multi-agent support system"
authors = [{name = "Mohan Ganesh", email = "mohanganesh165577@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = {text = "MIT"}

dependencies = [
    # orchestration
    "langgraph>=0.2.70,<2.0",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "langchain-google-genai>=2.0.7,<3.0",
    "langchain-cohere>=0.3,<0.4",
    "langchain-huggingface>=0.1.2,<1.0",
    "langgraph-checkpoint-sqlite>=3.0.3,<3.1",

    # retrieval
    "chromadb>=0.5.20,<0.7",
    "sentence-transformers>=3.3.0,<5.0",
    "rank-bm25>=0.2.2,<0.3",
    "tavily-python>=0.5,<1.0",
    "cohere>=5.0,<6.0",

    # validation
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "pyyaml>=6.0.2,<7.0",

    # api
    "fastapi>=0.115.0,<0.120",
    "uvicorn[standard]>=0.32.0,<0.40",
    "python-multipart>=0.0.20,<0.1",
    "httpx>=0.27.0,<0.30",
    "sse-starlette>=2.1.0,<3.0",

    # eval
    "ragas>=0.2,<0.3",

    # logging
    "structlog>=24.4.0,<26.0",

    # cli
    "typer>=0.13.0,<0.20",
    "rich>=13.9.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "pytest-mock>=3.14.0,<4.0",
    "ruff>=0.7.0,<1.0",
    "httpx>=0.27.0",
]

[project.scripts]
clouddash = "clouddash.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clouddash = ["prompts/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
markers = ["slow: slow tests", "integration: needs API keys"]
